fixed overflowing text in blog post titles

--- a/src/assets/less/custom.less
+++ b/src/assets/less/custom.less
@@ -122,6 +122,12 @@ body {
     }
     .card-content {
         padding: 25px;
+        &.limit-length > h3 {
+            overflow-wrap: break-word;
+            word-wrap: break-word;
+            hyphens: auto;
+            hyphenate-character: "-";
+        }
     }
     .card-image {
         width: 100%;
